--- a/index.html
+++ b/index.html
@@ -5,29 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
-    <style>
-      html {
-        box-sizing: border-box;
-      }
-      *, *:before, *:after {
-        box-sizing: inherit;
-      }
-      body {
-        margin: 0;
-        padding : 0;
-        background: #444;
-      }
-      #unityContainer {
-        width: 100vw;
-        height: 100vh;
-        position: absolute;
-      }
-      canvas {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-      }
-      </style>
+   
 
     <title>Unity WebGL Player | GROßE MÜLHEIM REVUE</title>
     <script src="Build/UnityLoader.js"></script>
@@ -36,7 +14,9 @@
     </script>
   </head>
   <body>
-    <div id="unityContainer" style="width: 100%; height: 100%; margin: 0"></div>
-	  <div style="height:20px; width: %UNITY_WIDTH%px; background: white;" onclick="unityInstance.SetFullscreen(1)"><p>Hier clicken für den Vollbildmodus.</p></div>
+   
+	<div style="height:20px; width: %UNITY_WIDTH%px; background: white;" onclick="unityInstance.SetFullscreen(1)"><p>Hier clicken für den Vollbildmodus.</p></div>
+	  <div id="unityContainer" style="width: %UNITY_WIDTH%px; height: %UNITY_HEIGHT%px; margin: auto"></div>
+	  
   </body>
 </html>
