Revert "Update index.html"
This reverts commit 64d35ee90ec06a333eec13de6472fc3080ce527e.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
    
-	<div style="height:20px; width: %UNITY_WIDTH%px; background: white;" onclick="unityInstance.SetFullscreen(fullscreen)"><p>Hier clicken für den Vollbildmodus.</p></div>
+	<div style="height:20px; width: %UNITY_WIDTH%px; background: white;" onclick="unityInstance.SetFullscreen(1)"><p>Hier clicken für den Vollbildmodus.</p></div>
 	  <div id="unityContainer" style="width: %UNITY_WIDTH%px; height: %UNITY_HEIGHT%px; margin: auto"></div>
 	  
   </body>
